Fix: 1. Item box height stable with toggled editor. 2. Item editor buttons alignment. (#164)

--- a/menu-app/src/app/restaurant-components/itemv2/itemv2.component.scss
+++ b/menu-app/src/app/restaurant-components/itemv2/itemv2.component.scss
@@ -4,6 +4,7 @@
   margin-top: 5px;
   margin-left: 0px;
   position: relative;
+  min-height: 12vh;
 }
 
 //desktop
@@ -92,6 +93,7 @@
   background-color: #f0f3f5;
   padding-bottom: 10px;
   height: calc(100% - 10px);
+  display: grid;
 
   & .tag-container {
     position: relative;
