--- a/menu-app/src/app/restaurant-components/sectionv2/sectionv2.component.scss
+++ b/menu-app/src/app/restaurant-components/sectionv2/sectionv2.component.scss
@@ -1,3 +1,8 @@
+.row-item{
+  align-items: flex-start;
+  min-height: 15vh;
+}
+
 .section {
   margin: 0 0.5em 0 0.5em;
 }
@@ -43,7 +48,7 @@
     border-radius: 20px;
     border: solid 0.5px #dfe0e3;
     margin-top: 20px;
-    height: 80%;
+    max-height: 12vh;
     background-color:  #f0f3f5;
     display: flex;
     align-items: center;
